# euler

./: .gitignore  README.md  compare.py  compare_results.txt  parse.py
Mathematica/: MyStyleSheet.nb  euler1.nb  euler2.nb  euler3.nb  euler4.nb
cpp/: compile.sh  euler.cpp  euler.h  euler1.cpp  euler2.cpp  euler3.cpp  euler4.cpp  euler5.cpp  euler6.cpp  euler7.cpp  euler8.cpp  eulertest.cpp  template.cpp  timer.cpp  timer.h
fortran/: .#euler2.f90  euler.f90  euler1  euler1.f90  euler2  euler2.f90  euler3.f90
haskell/: euler.hs  euler1.hs  euler10.hs  euler2.hs  euler6.hs
julia/: euler1.jl
ms/: euler.ms  euler1.ms  euler2.ms  euler31.ms
python/: .#euler.py  .#euler41.py  check_all.py  decorator.py  diff  euler.py  euler1.py  euler10.py  euler10_slow.py  euler11.py  euler12.py  euler120_slow.py  euler12_slow.py  euler13.py  euler14.py  euler14_memhog.py  euler15.py  euler16.py  euler17.py  euler18.py  euler19.py  euler2.py  euler20.py  euler21.py  euler22.py  euler23.py  euler23_slow_memhog.py  euler24.py  euler24_memhog.py  euler25.py  euler26.py  euler26_slow.py  euler27.py  euler28.py  euler29.py  euler3.py  euler30_slow.py  euler31.py  euler315.py  euler315_slow_memhog.py  (+53 more)
python/data/: answers  common_words.txt
