[tool.poetry]
name = "euler"
version = "1.0.21"
description = "'Euler solutions in Python'"
authors = ["Tess Garrison <tessag159@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
